corrected some unicode block names (may needs further work)

--- a/unicodefonttable.dtx
+++ b/unicodefonttable.dtx
@@ -1528,7 +1528,7 @@
          { "008 }{ Latin-1~ Supplement }
          { "010 }{ Latin~ Extended-A }
          { "018 }{ Latin~ Extended-B }
-         { "025 }{ IPA~ Extension }
+         { "025 }{ IPA~ Extensions }
          { "02B }{ Spacing~ Modifier~ Letters }
          { "030 }{ Combining~ Diacritical~ Marks }
          { "037 }{ Greek~ and~ Coptic }
@@ -1597,10 +1597,11 @@
          { "260 }{ Miscellaneous~ Shapes }
          { "270 }{ Dingbats }
          { "27C }{ Miscellaneous~ Mathematical~ Symbols-A }
+         { "27F }{ Supplemental~ Arrows-A }
          { "280 }{ Braille~ Patterns }
-         { "290 }{ Supplement~ Arrows-B }
+         { "290 }{ Supplemental~ Arrows-B }
          { "298 }{ Miscellaneous~ Mathematical~ Symbols-B }
-         { "2A0 }{ Supplement~ Mathematical~ Operators }
+         { "2A0 }{ Supplemental~ Mathematical~ Operators }
          { "2B0 }{ Miscellaneous~ Symbols~ and~ Arrows }
          { "2C0 }{ Glagolitic }
          { "2C6 }{ Latin~ Extended-C }
@@ -1608,6 +1609,7 @@
          { "2D0 }{ Georgian~ Supplement }
          { "2D3 }{ Tifinagh }
          { "2D8 }{ Ethiopic~ Extended }
+         { "2E0 }{ Supplemental~ Punctuation }
          { "2E8 }{ CJK~ Radicals~ Supplement }
          { "2F0 }{ Kangxi~ Radicals }
          { "2FF }{ Ideographic~ Description~ Characters }
@@ -1629,6 +1631,26 @@
          { "A72 }{ Latin~ Extended-D }
          { "A80 }{ Syloti~ Nagri }
          { "A84 }{ Phags-pa }
+         { "A88 }{ Saurashtra }
+         { "A8E }{ Devanagari Extended }
+         { "A90 }{ Kayah Li }
+         { "A93 }{ Rejang }
+         { "A96 }{ Hangul Jamo Extended-A }
+         { "A98 }{ Javanese }
+         { "A9E }{ Myanmar Extended-B }
+         { "AA0 }{ Cham }
+         { "AA6 }{ Myanmar Extended-A }
+         { "AA8 }{ Tai Viet }
+         { "AAE }{ Meetei Mayek Extensions }
+         { "AB0 }{ Ethiopic Extended-A }
+         { "AB3 }{ Latin Extended-E }
+         { "AB7 }{ Cherokee Supplement }
+         { "ABC }{ Meetei Mayek }
+         { "AC0 }{ Hangul Syllables }
+         { "D7B }{ Hangul Jamo Extended-B }
+         { "D80 }{ High Surrogates }
+         { "DB8 }{ High Private Use Surrogates }
+         { "DC0 }{ Low Surrogates }
          { "E00 }{ Private~ Use~ Area }
          { "F90 }{ CJK~ Compatibility~ Ideographs }
          { "FB0 }{ Alphabetic~ Presentation~ Forms }
