use longtable* from ltcaption in some cases

--- a/changes.txt
+++ b/changes.txt
@@ -2,4 +2,6 @@
 
 	* unicodefonttable.dtx (subsection{Keys and their values}):
 	Added statistics-compare-format key.
+	Use longtable* from the caption package when not showing a
+	header with a \caption.
 
